--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
-    dplyr
+    dplyr,
+    Validate
+Remotes:
+    FlippieCoetser/Validate
 Suggests: 
     testthat (>= 3.0.0),
 Config/testthat/edition: 3
